--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@stagewise-plugins/react": "^0.4.9",
     "@stagewise/toolbar-next": "^0.4.9",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.50.3",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -51,16 +54,15 @@
     "next": "^15.3.4",
     "next-themes": "latest",
     "react": "^19.1.0",
-    "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
-    "sonner": "^1.7.1",
+    "sonner": "^1.7.4",
+    "swr": "^2.3.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "latest",
-    "vaul": "^0.9.6",
     "zod": "^3.24.1",
     "zustand": "latest"
   },
