--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@pinecone-database/pinecone": "^6.1.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -50,6 +51,7 @@
     "date-fns": "^3.0.0",
     "embla-carousel-react": "8.5.1",
     "immer": "latest",
+    "inngest": "^3.40.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^15.3.4",
