--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@stagewise/toolbar-next": "^0.4.9",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.3",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.10.0",
     "cheerio": "^1.1.0",
@@ -54,8 +55,11 @@
     "inngest": "^3.40.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.9.1",
     "next": "^15.3.4",
     "next-themes": "latest",
+    "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.1.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.1",
@@ -66,11 +70,14 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "latest",
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1",
     "zustand": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
