--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "target": "ES6",
+    "sourceMap": true,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
