--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@stagewise/toolbar-next": "^0.4.9",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.3",
+    "@types/cheerio": "^0.22.35",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.10.0",
