--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.1",
     "@pinecone-database/pinecone": "^6.1.1",
     "@radix-ui/react-accordion": "1.2.2",
