feat(dashboard): implement dynamic dashboard with real-time stats and activity
- Add new API endpoints for dashboard stats and activity
- Create custom hooks for fetching dashboard data with SWR
- Replace static mock data with real database queries
- Add health check and test dashboard API endpoints
- Improve error handling and loading states
- Update UI components to handle dynamic data
- Add debug information for development

--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "dev:clean": "powershell -ExecutionPolicy Bypass -File clean-start.ps1",
+    "dev:turbo": "next dev --turbo",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "clean": "powershell -Command \"if (Test-Path .next) { Remove-Item -Path .next -Recurse -Force }\""
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
