--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev:turbo": "next dev --turbo",
     "lint": "next lint",
     "start": "next start",
-    "clean": "powershell -Command \"if (Test-Path .next) { Remove-Item -Path .next -Recurse -Force }\""
+    "clean": "powershell -Command \"if (Test-Path .next) { Remove-Item -Path .next -Recurse -Force }\"",
+    "clear-cache": "node scripts/clear-cache.js",
+    "dev:fresh": "node scripts/clear-cache.js && next dev"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
